# sensei

./: .deepsource.toml  .gitignore  AGENTS.md  Cargo.toml  default_8875872360715588274_0_75032.profraw
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/app/: command.rs  input.rs  mod.rs  state.rs
src/book/: epub.rs  markdown.rs  mod.rs  model.rs  storage.rs
src/claude/: auth.rs  client.rs  error.rs  mod.rs  models.rs  streaming.rs
src/config/: mod.rs  progress.rs  session.rs
src/export/: claude_md.rs  mod.rs
src/learning/: claude.rs  mod.rs  quiz.rs
src/notes/: mod.rs  model.rs  storage.rs
src/syntax/: mod.rs
src/theme/: mod.rs  tokyo_night.rs
src/ui/: claude_panel.rs  command_line.rs  content.rs  curriculum.rs  image.rs  landing.rs  layout.rs  main_screen.rs  mod.rs  notes_panel.rs  quiz_panel.rs  section_footer.rs
