[package]
name = "sensei"
version = "0.1.0"
edition = "2024"
authors = ["Niall Benson <niall.benson@gmail.com>"]
description = "A beautiful TUI for interactive technical book learning, powered by Claude"
license = "Apache-2.0"
repository = "https://github.com/niallbenson/sensei"
readme = "README.md"
keywords = ["tui", "learning", "education", "rust", "claude"]
categories = ["command-line-utilities", "education"]
rust-version = "1.85"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["serde"] }
crossterm = "0.28"

# Syntax highlighting
syntect = "5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown parsing
pulldown-cmark = "0.12"

# EPUB parsing
epub = "2"

# Directory paths
directories = "6"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
